hoping this fixes spacing issue

--- a/WebVisualizations/assets/css/styles.css
+++ b/WebVisualizations/assets/css/styles.css
@@ -56,11 +56,12 @@ img {
 }
 
 #navbarbrand {
+    display: inline-block;
     font-family: 'Teko', sans-serif;
     font-size: 28pt;
     padding-top: 12px;
-    margin-right: 0px;
-    padding-right: 0px;
+    margin-right: 0;
+    padding-right: 0;
 }
 
 #dropdowndivider {
